# redfish-certrobot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  clouds.yaml.example  pyproject.toml  upper-constraints.txt
src/redfish_certrobot/: .env.example  __init__.py  __main__.py  issue.py  nodes.py  values.yaml
src/redfish_certrobot/templates/: deployment.yaml  secret.yaml
tests/redfish_certrobot/: test_issue.py
